<resources>
    <string name="app_name">PYB Studyroom</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="daftar_kelas">Courses List</string>
    <string name="nama_kelas">Nama Kelas</string>
    <string name="mata_pelajaran">Mata Pelajaran</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="kode_kelas">Kode Kelas</string>
    <string name="nama_tugas">Nama Tugas</string>
    <string name="materi">Materi</string>

    <string name="edit_course">Edit Course</string>
    <string name="add_course">Add Course</string>
    <string name="number_digit_only">0123456789</string>

    <string name="assignment_list">Assignments List</string>
    <string name="add_edit_delete_page">Add Edit Delete Page</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="add">Add</string>
    <string name="deskripsi">deskripsi</string>
    <string name="nama">nama</string>
    <string name="email">email</string>

    <string name="edit_assignment">Edit Assignment</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="click_to_register">Belum punya akun? Klik disini untuk mendaftar</string>
    <string name="click_to_login">Sudah punya akun? Klik disini untuk masuk</string>

    <string name="validation_is_empty">%1$s tidak boleh kosong</string>
    <string name="validation_username">username harus lebih dari 5 karakter</string>
    <string name="validation_email">email tidak sesuai format</string>
    <string name="assignment">Assignment</string>
</resources>